# Ising-Sim-2D-Shahjahaan

./: CMakeLists.txt  Ising_2d_Classic.cpp  README.md
Ising_2d_shah_v1.0/Ising_2d_shah_v1.0/: Makefile  tempCodeRunnerFile.cpp
